# WaveOCR

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
src/: generator.cpp  generator.h  ocr.cpp  ocr.h
